data preparation for SAR ship data in complex background dataset

--- a/scripts/under_development_SAR_Ship_under_complex_backgrounds_datasets_Part1.ipynb
+++ b/scripts/under_development_SAR_Ship_under_complex_backgrounds_datasets_Part1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,19 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "PATH = r'C:\\Users\\arman\\Documents\\GitHub\\sar_ship_detect'\n",
     "#data_path = join(os. getcwd(), '..','data', 'Iceberg-classifier-challenge')\n",
     "data_path = join(PATH, 'data', 'ship_SAR_datasets_Part1', 'JPGImages')\n",
-    "target_path = join(PATH, 'data', 'ship_SAR_datasets_Part1', 'Annotations')"
+    "target_path_xml = join(PATH, 'data', 'ship_SAR_datasets_Part1', 'Annotations')\n",
+    "target_path_txt = join(PATH, 'data', 'ship_SAR_datasets_Part1', 'ground_truth')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -53,16 +54,16 @@
     {
      "data": {
       "text/plain": [
-       "(11796, 11796)"
+       "(11796, 11796, 11795)"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(os.listdir(data_path)), len(os.listdir(target_path))"
+    "len(os.listdir(data_path)), len(os.listdir(target_path_xml)), len(os.listdir(target_path_txt))"
    ]
   },
   {
@@ -158,7 +159,7 @@
    ],
    "source": [
     "from xml.dom.minidom import parse, parseString\n",
-    "import sys\n",
+    "\n",
     "# get target paths\n",
     "target_paths = glob.glob(f\"{target_path}/*.xml\")\n",
     "\n",
@@ -276,11 +277,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Loading annotation from txt files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading annotations\n",
+      " 11795 / 11795 , ['Ship', '2', '73', '35', '21']']]]"
+     ]
+    }
+   ],
+   "source": [
+    " # load the image annotations\n",
+    "\n",
+    "search_data = \"*.txt\"\n",
+    "querie = join(target_path_txt, search_data)\n",
+    "annot_paths = glob.glob(querie)\n",
+    "\n",
+    "annot = []\n",
+    "\n",
+    "i = 0\n",
+    "print('Loading annotations')   \n",
+    "for annotation in annot_paths:\n",
+    "    label = open(annotation, 'r',encoding=\"UTF8\").readline().split(\"\\n\")[0].split(\" \")\n",
+    "    annot.append(label)\n",
+    "\n",
+    "    i +=1\n",
+    "    sys.stdout.write(f\"\\r {i} / {len(annot_paths)} , {label}\")\n",
+    "    sys.stdout.flush() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name\n",
+       "Ship    11795\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# make a dataframe for bbox info\n",
+    "df_annot = pd.DataFrame(annot, columns=['name', 'xmax', 'ymin', 'width', 'height'])\n",
+    "df_annot.groupby('name').size()"
+   ]
   },
   {
    "cell_type": "markdown",
