data preparation for SAR ship data in complex background dataset

--- a/scripts/under_development_SAR_Ship_under_complex_backgrounds_datasets_Part1.ipynb
+++ b/scripts/under_development_SAR_Ship_under_complex_backgrounds_datasets_Part1.ipynb
@@ -140,7 +140,7 @@
    "metadata": {},
    "source": [
     "## Run this code once as it produces .txt files from .xml annotations and saves in a folder\n",
-    "### Make a softcoded list intersection\n",
+    "### Todo: Make a softcoded list intersection\n",
     "bofore running the code there is a need to create an empty `ground_truth` folder in the same directory where the `Annotation` is"
    ]
   },
