--- a/scripts/model_notebooks/iceberg_ship_classification.ipynb
+++ b/scripts/model_notebooks/iceberg_ship_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define path to the data\n",
-    "# PATH = r'C:\\Users\\arman\\Documents\\GitHub\\sar_ship_detect'\n",
-    "PATH = '/home/manvel/GitHub/sar_ship_detect/'\n",
+    "PATH = r'C:/Users/arman/Documents/GitHub/sar_ship_detect'\n",
+    "# PATH = '/home/manvel/GitHub/sar_ship_detect/'\n",
     "#data_path = join(os. getcwd(), '..','data', 'Iceberg-classifier-challenge')\n",
     "DATA_PATH = join(PATH, 'data/Iceberg-classifier-challenge')\n",
     "OUT_PATH = join(PATH, 'model_weights')"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -175,7 +175,7 @@
     "angle = np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"inc_angle\"]])\n",
     "Ratio = HH/HV # just to bring it back to the scale of the HH and HV data in dB\n",
     "\n",
-    "data = np.concatenate([HH[:, :, :, np.newaxis], HV[:, :, :, np.newaxis],\n",
+    "data = np.concatenate([HH[:, :, :, np.newaxis], Ratio[:, :, :, np.newaxis],\n",
     "                          angle[:, :, :, np.newaxis]], axis=-1)\n",
     "# data = Ratio[:, :, :, np.newaxis]\n",
     "\n",
@@ -13547,7 +13547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -13576,7 +13576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13637,7 +13637,7 @@
     "\n",
     "#file_path = \".model_weights.hdf5\"\n",
     "#file_path = \".model_weights_inc_angle_as_band.hdf5\"\n",
-    "MODEL_NAME = \"..model_weights_Ice_inc_angle_as_band.hdf5\"\n",
+    "MODEL_NAME = \".model_weights_Ice_HH_angle_Ratioas.hdf5\"\n",
     "weigth_path = join(OUT_PATH, MODEL_NAME)\n",
     "callbacks = get_callbacks(filepath=join(OUT_PATH, MODEL_NAME ), patience=10)"
    ]
@@ -13673,7 +13673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -13712,7 +13712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -13770,125 +13770,14 @@
       "Total params: 560,193\n",
       "Trainable params: 560,193\n",
       "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "Train on 1154 samples, validate on 289 samples\n",
-      "Epoch 1/50\n",
-      "1154/1154 [==============================] - 15s 13ms/step - loss: 1.0257 - accuracy: 0.5243 - val_loss: 0.6851 - val_accuracy: 0.5225\n",
-      "Epoch 2/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.6211 - accuracy: 0.5979 - val_loss: 0.5228 - val_accuracy: 0.7059\n",
-      "Epoch 3/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.5691 - accuracy: 0.6681 - val_loss: 0.5313 - val_accuracy: 0.7266\n",
-      "Epoch 4/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.5531 - accuracy: 0.6820 - val_loss: 0.5115 - val_accuracy: 0.7232\n",
-      "Epoch 5/50\n",
-      "1154/1154 [==============================] - 15s 13ms/step - loss: 0.5584 - accuracy: 0.6820 - val_loss: 0.5047 - val_accuracy: 0.7232\n",
-      "Epoch 6/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.5511 - accuracy: 0.6802 - val_loss: 0.4857 - val_accuracy: 0.7509\n",
-      "Epoch 7/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.5406 - accuracy: 0.6811 - val_loss: 0.4854 - val_accuracy: 0.7370\n",
-      "Epoch 8/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.5378 - accuracy: 0.6967 - val_loss: 0.4671 - val_accuracy: 0.7716\n",
-      "Epoch 9/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.5248 - accuracy: 0.7097 - val_loss: 0.4268 - val_accuracy: 0.7924\n",
-      "Epoch 10/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.4867 - accuracy: 0.7548 - val_loss: 0.4830 - val_accuracy: 0.6747\n",
-      "Epoch 11/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.4702 - accuracy: 0.7513 - val_loss: 0.3608 - val_accuracy: 0.8028\n",
-      "Epoch 12/50\n",
-      "1154/1154 [==============================] - 15s 13ms/step - loss: 0.4412 - accuracy: 0.7877 - val_loss: 0.3441 - val_accuracy: 0.8235\n",
-      "Epoch 13/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.3978 - accuracy: 0.7990 - val_loss: 0.3169 - val_accuracy: 0.8408\n",
-      "Epoch 14/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3985 - accuracy: 0.8094 - val_loss: 0.3550 - val_accuracy: 0.8304\n",
-      "Epoch 15/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3853 - accuracy: 0.8024 - val_loss: 0.3397 - val_accuracy: 0.8201\n",
-      "Epoch 16/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3584 - accuracy: 0.8345 - val_loss: 0.3432 - val_accuracy: 0.8062\n",
-      "Epoch 17/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3520 - accuracy: 0.8206 - val_loss: 0.3268 - val_accuracy: 0.8166\n",
-      "Epoch 18/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3229 - accuracy: 0.8484 - val_loss: 0.3094 - val_accuracy: 0.8478\n",
-      "Epoch 19/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.3199 - accuracy: 0.8449 - val_loss: 0.3012 - val_accuracy: 0.8547\n",
-      "Epoch 20/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3151 - accuracy: 0.8310 - val_loss: 0.3248 - val_accuracy: 0.8512\n",
-      "Epoch 21/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3224 - accuracy: 0.8562 - val_loss: 0.3157 - val_accuracy: 0.8581\n",
-      "Epoch 22/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3352 - accuracy: 0.8518 - val_loss: 0.3119 - val_accuracy: 0.8339\n",
-      "Epoch 23/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3163 - accuracy: 0.8518 - val_loss: 0.3074 - val_accuracy: 0.8651\n",
-      "Epoch 24/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2837 - accuracy: 0.8709 - val_loss: 0.3068 - val_accuracy: 0.8443\n",
-      "Epoch 25/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2831 - accuracy: 0.8640 - val_loss: 0.3089 - val_accuracy: 0.8270\n",
-      "Epoch 26/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3390 - accuracy: 0.8466 - val_loss: 0.4385 - val_accuracy: 0.7647\n",
-      "Epoch 27/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3154 - accuracy: 0.8596 - val_loss: 0.2973 - val_accuracy: 0.8374\n",
-      "Epoch 28/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2821 - accuracy: 0.8726 - val_loss: 0.3785 - val_accuracy: 0.8166\n",
-      "Epoch 29/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.3012 - accuracy: 0.8752 - val_loss: 0.2951 - val_accuracy: 0.8339\n",
-      "Epoch 30/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2963 - accuracy: 0.8700 - val_loss: 0.2858 - val_accuracy: 0.8547\n",
-      "Epoch 31/50\n",
-      "1154/1154 [==============================] - 14s 13ms/step - loss: 0.2575 - accuracy: 0.8882 - val_loss: 0.2664 - val_accuracy: 0.8720\n",
-      "Epoch 32/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2411 - accuracy: 0.8977 - val_loss: 0.3023 - val_accuracy: 0.8616\n",
-      "Epoch 33/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2595 - accuracy: 0.8891 - val_loss: 0.2640 - val_accuracy: 0.8824\n",
-      "Epoch 34/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2465 - accuracy: 0.9012 - val_loss: 0.2499 - val_accuracy: 0.8789\n",
-      "Epoch 35/50\n"
+      "_________________________________________________________________\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2430 - accuracy: 0.8761 - val_loss: 0.2410 - val_accuracy: 0.8858\n",
-      "Epoch 36/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2587 - accuracy: 0.8830 - val_loss: 0.2486 - val_accuracy: 0.8962\n",
-      "Epoch 37/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2853 - accuracy: 0.8718 - val_loss: 0.2391 - val_accuracy: 0.8893\n",
-      "Epoch 38/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2590 - accuracy: 0.9029 - val_loss: 0.2547 - val_accuracy: 0.8962\n",
-      "Epoch 39/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2416 - accuracy: 0.8856 - val_loss: 0.2970 - val_accuracy: 0.8581\n",
-      "Epoch 40/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2433 - accuracy: 0.8917 - val_loss: 0.2431 - val_accuracy: 0.8893\n",
-      "Epoch 41/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2372 - accuracy: 0.9012 - val_loss: 0.2828 - val_accuracy: 0.8512\n",
-      "Epoch 42/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2531 - accuracy: 0.8925 - val_loss: 0.2459 - val_accuracy: 0.8927\n",
-      "Epoch 43/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2673 - accuracy: 0.8744 - val_loss: 0.2927 - val_accuracy: 0.8512\n",
-      "Epoch 44/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2278 - accuracy: 0.9107 - val_loss: 0.2949 - val_accuracy: 0.8581\n",
-      "Epoch 45/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2407 - accuracy: 0.9021 - val_loss: 0.2524 - val_accuracy: 0.8754\n",
-      "Epoch 46/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2351 - accuracy: 0.8925 - val_loss: 0.2677 - val_accuracy: 0.8824\n",
-      "Epoch 47/50\n",
-      "1154/1154 [==============================] - 14s 12ms/step - loss: 0.2011 - accuracy: 0.9125 - val_loss: 0.2463 - val_accuracy: 0.8893\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.callbacks.History at 0x7f0fc5531b50>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Without denoising, core features.\n",
     "gmodel=getModel()\n",
-    "gmodel.fit(X_train_cv, y_train_cv,\n",
+    "history = gmodel.fit(X_train_cv, y_train_cv,\n",
     "          batch_size=24,\n",
     "          epochs=50,\n",
     "          verbose=1,\n",
@@ -13898,15 +13787,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "289/289 [==============================] - 1s 3ms/step\n",
-      "Test loss: 0.23914480828083923\n",
+      "289/289 [==============================] - 2s 8ms/step\n",
+      "Test loss: 0.23914481611812816\n",
       "Test accuracy: 0.8892733454704285\n"
      ]
     }
@@ -13928,15 +13817,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "161/161 [==============================] - 1s 3ms/step\n",
-      "Test loss: 0.2608347891924631\n",
+      "161/161 [==============================] - 1s 8ms/step\n",
+      "Test loss: 0.26083478622712625\n",
       "Test accuracy: 0.8757764101028442\n"
      ]
     }
@@ -13946,6 +13835,54 @@
     "score = gmodel.evaluate(X_test, y_test, verbose=1)\n",
     "print('Test loss:', score[0])\n",
     "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Sequential' object has no attribute 'history'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-bad3d8ca2133>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'acc'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'val_acc'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'model accuracy'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Sequential' object has no attribute 'history'"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig = plt.figure()\n",
+    "\n",
+    "plt.plot(history.history['acc'])\n",
+    "plt.plot(history.history['val_acc'])\n",
+    "plt.title('model accuracy')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'test'], loc='upper left')\n",
+    "plt.show()\n",
+    "fig.savefig('my_figure_1.png')\n",
+    "\n",
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.title('model loss')\n",
+    "plt.ylabel('loss')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'test'], loc='upper left')\n",
+    "plt.show()\n",
+    "fig.savefig('my_figure_2.png')"
    ]
   },
   {
@@ -13988,7 +13925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
