PL run with adaptive LR

--- a/scripts/model_notebooks/iceberg_ship_classification.ipynb
+++ b/scripts/model_notebooks/iceberg_ship_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -13664,14 +13664,16 @@
     "    return gmodel\n",
     "\n",
     "\n",
-    "def get_callbacks(filepath, patience=2):\n",
+    "def get_callbacks(filepath, patience=10):\n",
     "    es = EarlyStopping('val_loss', patience=patience, mode=\"min\")\n",
     "    msave = ModelCheckpoint(filepath, save_best_only=True)\n",
-    "    return [es, msave]\n",
+    "    reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.7,\n",
+    "                              patience=2, min_lr=0.001)\n",
+    "    return [es, msave, reduce_lr]\n",
     "\n",
     "#file_path = \".model_weights_inc_angle_as_band.hdf5\"\n",
-    "weigth_path = join(OUT_PATH, \".Ice_HH_HV_Ratio_Lee_filter_Pseudolabel.hdf5\")\n",
-    "callbacks = get_callbacks(filepath=weigth_path, patience=7)\n",
+    "weigth_path = join(OUT_PATH, \".Ice_HH_HV_Ratio_Lee_filter_PL_ReduceLR.hdf5\")\n",
+    "callbacks = get_callbacks(filepath=weigth_path, patience=8)\n",
     "\n",
     "# logdir = os.path.join('.\\\\Graph')\n",
     "\n",
@@ -14307,7 +14309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
